--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-worlds.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-worlds.vm
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    $eCdn.setAppZone('/my/socials')
+    $eCdn.setAppZone('/my/worlds')
 <head>
     #parse('shared/html-head.vm')
-    <title>#springMessage('SettingsPublicityPage.title')</title>
+    <title>#springMessage('MyWorldsPage.title')</title>
 </head>
     #parse('_index-macros.vm')
     #parse('shared/form-macros.vm')
