--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/_index-macros.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/_index-macros.vm
@@ -1,14 +1,44 @@
-#macro(bodyCommonMiniTabs)
+#macro(landingSidebar $activeTab)
+<div id="brandLogo">
+    <a href="$cp/" title="navigate to landing page"></a>
+</div>
+<div id="bodyMenu">
+    <div class="mini-tabs">
+        #landingSidebarMiniTabs()
+        <div class="mini-tab-container">
+            <div id="landingSidebarCommon" data-tab="landingSidebarCommon" #if($activeTab=='landingSidebarCommon')class="active-tab"#end>
+                #landingSidebarCommonContent()
+            </div>
+            <div id="landingSidebarHelp" data-tab="landingSidebarHelp" #if($activeTab=='landingSidebarHelp')class="active-tab"#end>
+            </div>
+            <div id="landingSidebarAccount" data-tab="landingSidebarAccount" #if($activeTab=='landingSidebarAccount')class="active-tab"#end>
+                #if($eVisitor.logged)
+                    #landingSidebarAccountContent()
+                #else
+                    #landingSidebarVisitorContent()
+                #end
+            </div>
+        </div>
+    </div>
+</div>
+#end
+
+#macro(landingSidebarMiniTabs)
 <div class="mini-tab-navigator">
-    <div class="grid-2">
+    <div class="grid-3">
         <div class="content">
             <div class="cell-1">
-                <a href="#" data-tab="bodyMenuCommon">
+                <a href="#" data-tab="landingSidebarCommon">
                     #springMessage('brandMenu.menu')
                 </a>
             </div>
             <div class="cell-1">
-                <a href="#" data-tab="bodyMenuAccount">
+                <a href="#" data-tab="landingSidebarHelp">
+                    #springMessage('brandMenu.help')
+                </a>
+            </div>
+            <div class="cell-1">
+                <a href="#" data-tab="landingSidebarAccount">
                     #springMessage('brandMenu.account')
                 </a>
             </div>
@@ -17,68 +47,96 @@
 </div>
 #end
 
-#macro(bodyCommonMenuSelector)
+#macro(landingSidebarCommonContent)
+<h1>#springMessage('LandingPage.readyToBegin')</h1>
 <ul class="option-selector">
     <li #if($eCdn.appZone.equals('/worlds'))class="current"#end>
         <a href="$cp/worlds">#springMessage('commonMenu.worlds')
-            <span class="note">17</span>
+            #if($eSummary.worldCount>0)<span class="note">$eSummary.worldCount</span>#end
         </a></li>
     <li #if($eCdn.appZone.equals('/avatars'))class="current"#end>
         <a href="$cp/avatars">#springMessage('commonMenu.avatars')
-            <span class="note">14</span>
+            #if($eSummary.avatarCount>0)<span class="note">$eSummary.avatarCount</span>#end
         </a></li>
 </ul>
 #end
 
-#macro(bodyAccountMenu)
-<div class="user-card">
+#macro(landingSidebarAccountContent)
+<div class="user-card  section">
     <img src="http://www.gravatar.com/avatar/${eVisitor.user.gravatar}?s=64" alt=""/>
 
     <div class="data-name">
         <span class="name">$escTool.html($eVisitor.user.name)</span>
-
+        #if($eVisitor.user.alias)
+            <span class="alias">aka <a href="$cp/u/$eVisitor.user.alias">$eVisitor.user.alias</a></span>
+        #end
         <form action="$cp/auth/logout" method="post">
-            #if($eVisitor.user.alias)
-                <span class="alias">aka <a href="$cp/u/$eVisitor.user.alias">$eVisitor.user.alias</a></span>
-            #end
             <input type="submit" class="lower btn-grey" value="#springMessage('LogoutForm.submit')"/>
         </form>
     </div>
 </div>
-<div>
-    <h1 class="section-head">#springMessage('settingsMenu.caption')</h1>
+<div class="section">
+    <h1 class="section-head">#springMessage('myFavouriteMenu.caption')</h1>
+    <ul class="option-selector">
+        <li #if($eCdn.appZone.equals('/my/worlds'))class="current"#end>
+            <a href="$cp/my/worlds">#springMessage('myFavouriteMenu.worlds')
+                #if($eVisitor.worldCount>0)<span class="note">$eVisitor.worldCount</span>#end
+            </a></li>
+        <li #if($eCdn.appZone.equals('/my/avatars'))class="current"#end>
+            <a href="$cp/my/avatars">#springMessage('myFavouriteMenu.avatars')
+                #if($eVisitor.avatarCount>0)<span class="note">$eVisitor.avatarCount</span>#end
+            </a></li>
+    </ul>
+</div>
+<div class="section">
+    <h1 class="section-head">#springMessage('mySettingsMenu.caption')</h1>
     <ul class="option-selector">
         <li #if($eCdn.appZone.equals('/my/publicity'))class="current"#end>
-            <a href="$cp/my/publicity">#springMessage('settingsMenu.publicity')</a></li>
+            <a href="$cp/my/publicity">#springMessage('mySettingsMenu.publicity')</a></li>
         <li #if($eCdn.appZone.equals('/my/socials'))class="current"#end>
-            <a href="$cp/my/socials">#springMessage('settingsMenu.socials')</a></li>
+            <a href="$cp/my/socials">#springMessage('mySettingsMenu.socials')</a></li>
     </ul>
 </div>
 #end
 
-#macro(bodyAccountMenuEnter)
-<form method="post" action="$cp/auth">
-    <div class="form-field">
-        #formFieldLabel(true, 'LoginForm.login.label')
-        <div class="full-width-input">
-            <input type="email" name="j_username"
-                   placeholder="#springMessage('LoginForm.login.placeholder')"/>
+#macro(landingSidebarVisitorContent)
+<div class="section">
+    <form method="post" action="$cp/auth">
+        <div class="form-field">
+            #formFieldLabel(true, 'LoginForm.login.label')
+            <div class="full-width-input">
+                <input type="email" name="j_username"
+                       placeholder="#springMessage('LoginForm.login.placeholder')"/>
+            </div>
         </div>
-    </div>
-    <div class="form-field">
-        #formFieldLabel(true, 'LoginForm.password.label')
-        <div class="full-width-input">
-            <input type="password" name="j_password"
-                   placeholder="#springMessage('LoginForm.password.placeholder')"/>
+        <div class="form-field">
+            #formFieldLabel(true, 'LoginForm.password.label')
+            <div class="full-width-input">
+                <input type="password" name="j_password"
+                       placeholder="#springMessage('LoginForm.password.placeholder')"/>
+            </div>
         </div>
-    </div>
-    <div class="form-submit clearfix">
-        <div class="pull-left">
-            <input type="submit" value="#springMessage('LoginForm.submit')"/>
+        <div class="form-submit clearfix">
+            <div class="pull-left">
+                <input type="submit" value="#springMessage('LoginForm.submit')"/>
+            </div>
+            <div class="pull-right">
+                #springMessage('form.requiredNotice')
+            </div>
         </div>
-        <div class="pull-right">
-            #springMessage('form.requiredNotice')
-        </div>
-    </div>
-</form>
+    </form>
+</div>
+<div>
+    <h1 class="section-head">#springMessage('loginViaOther.caption')</h1>
+    <span>Facebook, Twitter, Google...</span>
+</div>
+<div class="section">
+    <h1 class="section-head">#springMessage('registrationSection.caption')</h1>
+    <ul class="option-selector">
+        <li #if($eCdn.appZone.equals('/auth/register'))class="current"#end>
+            <a href="$cp/auth/register">#springMessage('registrationSection.register')</a></li>
+        <li #if($eCdn.appZone.equals('/auth/restore'))class="current"#end>
+            <a href="$cp/auth/restore">#springMessage('registrationSection.resetPassword')</a></li>
+    </ul>
+</div>
 #end
