--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
@@ -10,27 +10,7 @@
 <body id="bodyColumns" class="layout-1-4">
 <div class="content">
     <div class="left">
-        <div id="brandLogo">
-            <a href="$cp/" title="navigate to landing page"></a>
-        </div>
-        <div id="bodyMenu">
-            <div class="mini-tabs">
-                #bodyCommonMiniTabs()
-                <div class="mini-tab-container">
-                    <div id="bodyMenuCommon" data-tab="bodyMenuCommon" class="active-tab">
-                        <h1>#springMessage('LandingPage.readyToBegin')</h1>
-                        #bodyCommonMenuSelector()
-                    </div>
-                    <div id="bodyMenuAccount" data-tab="bodyMenuAccount">
-                        #if($eVisitor.logged)
-                            #bodyAccountMenu()
-                        #else
-                            #bodyAccountMenuEnter()
-                        #end
-                    </div>
-                </div>
-            </div>
-        </div>
+        #landingSidebar('landingSidebarCommon')
     </div>
     <div class="center"></div>
 </div>
