--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -79,19 +79,6 @@ ul.option-selector {
         padding: 0;
         text-align: left;
 
-        &.current {
-            > a {
-                background-color: #404040;
-                color: #ffffff;
-                text-decoration: none;
-
-                > span {
-                    background-color: #FFFFFF;
-                    color: #000000;
-                }
-            }
-        }
-
         > a {
             display: block;
             padding: 3px 10px;
@@ -99,6 +86,16 @@ ul.option-selector {
             color: #404040;
             text-decoration: underline;
             font-size: .9em;
+
+            &:hover {
+                background: #DADADA;
+                color: #404040;
+
+                > span {
+                    background-color: #FFFFFF;
+                    color: #404040;
+                }
+            }
 
             > span {
                 position: relative;
@@ -121,6 +118,19 @@ ul.option-selector {
                     height: 5px;
                     margin-top: -3px;
                     background: url(../images/layout/option-list-corn.gif) no-repeat scroll left top transparent;
+                }
+            }
+        }
+
+        &.current {
+            > a {
+                background-color: #404040;
+                color: #ffffff;
+                text-decoration: none;
+
+                > span {
+                    background-color: #FFFFFF;
+                    color: #000000;
                 }
             }
         }
