--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -119,6 +119,7 @@ body#bodyColumns {
                 margin-top: -1em;
                 padding: 1em 0.5em 0;
                 background: #84CD1C;
+                .box-shadow(0 2px 2px #76B819);
             }
         }
     }
