--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -2,7 +2,7 @@
 @serifFontFamily: Georgia,"Times New Roman",Times, serif;
 @monoFontFamily: Monaco,Menlo, Consolas,"Courier New",monospace;
 
-@captionFontFamily: 'Open Sans Condensed', sans-serif;
+@captionFontFamily: Arial,'Open Sans Condensed', sans-serif;
 @captionColor: #404040;
 
 @bodyMenuZ: 500;
