--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
@@ -7,10 +7,16 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="format-detection" content="telephone=no">
 
-<link type="text/css" rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic"/>
-<link type="text/css" rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic"/>
+##<link type="text/css" rel="stylesheet"
+##      href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic"/>
+##<link type="text/css" rel="stylesheet"
+##      href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic"/>
+#if($eCdn.debugMode)
+<link rel="stylesheet/less" href="$cp/static/theme/less/layout.less"/>
+<script type="text/javascript" src="$libRoot/less/less-1.3.0.min.js"></script>
+#else
+<link rel="stylesheet" href="$cp/static/theme/dist/theme.min.css?_=$eCdn.serverStart"/>
+#end
 
 <script type="text/javascript">
     V = {};
@@ -30,10 +36,3 @@
             {ui:"$scriptsRoot/ui.js?_=$eCdn.serverStart"}
     );
 </script>
-
-#if($eCdn.debugMode)
-<link rel="stylesheet/less" href="$cp/static/theme/less/layout.less"/>
-<script type="text/javascript" src="$libRoot/less/less-1.3.0.min.js"></script>
-#else
-<link rel="stylesheet" href="$cp/static/theme/dist/waypalm.min.css?_=$eCdn.serverStart"/>
-#end
