--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -30,10 +30,10 @@
         font-size: 0.815em;
 
         a {
-            font-family: 'Open Sans Condensed', sans-serif;
+            font-family: @captionFontFamily;
             color: white;
             line-height: 1.4em;
-            font-size: 1em;
+            font-size: .9em;
             font-weight: 800;
             text-transform: uppercase;
             text-decoration: none;
@@ -82,7 +82,7 @@ ul.option-selector {
         > a {
             display: block;
             padding: 3px 10px;
-            .border-radius(4px);
+            .border-radius(6px);
             color: #404040;
             text-decoration: underline;
             font-size: .9em;
@@ -101,13 +101,16 @@ ul.option-selector {
                 position: relative;
                 float: right;
                 font-size: .8em;
+                line-height: 2.3em;
                 margin-left: 10px;
-                margin-right: -7px;
-                padding: 0 .5em 0 .45em;
-                color: #9A9A9A;
+                margin-right: -10px;
+                padding: 0 0.8em;
+                color: #5A5A5A;
                 background-color: #F5F5F5;
                 text-align: end;
-                .border-radius(4px);
+                vertical-align: middle;
+                text-decoration: none;
+                .border-radius(6px);
 
                 &:after {
                     content: "";
