--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -90,6 +90,7 @@ ul.option-selector {
             &:hover {
                 background: #DADADA;
                 color: #404040;
+                text-decoration: none;
 
                 > span {
                     background-color: #FFFFFF;
@@ -127,8 +128,8 @@ ul.option-selector {
 
         &.current {
             > a {
-                background-color: #404040;
-                color: #ffffff;
+                background-color: #EEEFFC;
+                color: #000000;
                 text-decoration: none;
 
                 > span {
