--- a/src/waypalm-site/src/main/webapp/static/theme/less/typography.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/typography.less
@@ -6,6 +6,8 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 
     &.section-head {
+        margin-bottom: .5em;
+
         &:after, &:before {
             font-size: 50%;
             line-height: 100%;
@@ -39,8 +41,4 @@ ul {
 
 .small-text {
     font-size: 75%;
-}
-
-.section {
-    margin-bottom: 1em;
 }
