--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -128,7 +128,7 @@ ul.option-selector {
 
         &.current {
             > a {
-                background-color: #EEEFFC;
+                background-color: #F5F5F5;
                 color: #000000;
                 text-decoration: none;
 
