schema - change field names

--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-worlds.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-worlds.vm
@@ -16,7 +16,7 @@
         <div class="section">
             <ul>
                 #foreach($world in $worldList)
-                    <li><a href="$cp/w/$world.slug">$world.title</a></li>
+                    <li><a href="$cp/w/$world.slug">$escTool.html($world.title)</a></li>
                 #end
             </ul>
         </div>
