--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -56,6 +56,10 @@ body#bodyColumns {
         margin-left: 0;
         margin-right: 0;
         position: relative;
+
+        > .content {
+            padding: 1em;
+        }
     }
 
     &.layout-1-5 {
