--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -140,3 +140,16 @@ ul.option-selector {
         }
     }
 }
+
+.btn-round-32 {
+    display: block;
+    height: 32px;
+    width: 32px;
+    background: #999;
+    .border-radius(16px);
+
+    &.btn-green {
+        background: #84CD1C;
+        color: #ffffff;
+    }
+}
