--- a/src/waypalm-site/src/main/webapp/static/theme/less/icons.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/icons.less
@@ -1,1 +1,15 @@
-/**/
+[class^="aicon-32-"] {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    vertical-align: text-top;
+    background-image: url(../images/icons/aicon.png);
+    background-position: 32px 32px;
+    background-repeat: no-repeat;
+    .ie7-restore-right-whitespace();
+}
+
+.aicon-32-add {
+    background-position: 0 -32px;
+}
