--- a/src/waypalm-site/src/main/webapp/static/theme/less/typography.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/typography.less
@@ -21,6 +21,12 @@ h1, h2, h3, h4, h5, h6 {
             content: "∵";
         }
     }
+
+    > span.secondary {
+        font-size: 80%;
+        color: lighten(@captionColor, 10%);
+        vertical-align: sub;
+    }
 }
 
 h1 {
