--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/_world-macros.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/_world-macros.vm
@@ -6,15 +6,36 @@
     <div class="mini-tabs">
         #worldPageMiniTabs()
         <div class="mini-tab-container">
-            <div id="landingSidebarCommon" data-tab="landingSidebarCommon"
-                 #if($activeTab=='landingSidebarCommon')class="active-tab"#end>
+            <div id="landingSidebarCommon" data-tab="landingSidebarCommon" #if($activeTab=='landingSidebarCommon')class="active-tab"#end>
                 #landingSidebarCommonContent()
             </div>
-            <div id="landingSidebarHelp" data-tab="landingSidebarHelp"
-                 #if($activeTab=='landingSidebarHelp')class="active-tab"#end>
+            <div id="landingSidebarHelp" data-tab="landingSidebarHelp" #if($activeTab=='landingSidebarHelp')class="active-tab"#end>
             </div>
-            <div id="landingSidebarWorld" data-tab="landingSidebarWorld"
-                 #if($activeTab=='landingSidebarWorld')class="active-tab"#end>
+            <div id="landingSidebarWorld" data-tab="landingSidebarWorld" #if($activeTab=='landingSidebarWorld')class="active-tab"#end>
+            #* @vtlvariable name="world" type="waypalm.domain.entity.World" *#
+                #if($eCan.controlWorld($world))
+                    <div class="section">
+                        <h1 class="section-head">#springMessage('WorldPage.sidebar.controlSection.title')</h1>
+                        <ul class="option-selector">
+                            <li><a href="$cp/manage/w/$world.slug/details">#springMessage('WorldPage.sidebar.controlSection.details')</a></li>
+                            <li><a href="$cp/manage/w/$world.slug/publishing">#springMessage('WorldPage.sidebar.controlSection.publishing')</a></li>
+                            <li><a href="$cp/manage/w/$world.slug/surfaces">#springMessage('WorldPage.sidebar.controlSection.surfaces')</a></li>
+                        </ul>
+                    </div>
+                #end
+                <div class="section">
+                    <h1 class="section-head">#springMessage('WorldPage.sidebar.surfaceSection.title')</h1>
+                #* @vtlvariable name="entity" type="waypalm.domain.entity.World" *#
+                    #if($entity.surfaces.empty)
+                        <p>#springMessage('WorldPage.sidebar.surfaceSection.empty')</p>
+                    #else
+                        <ul class="option-selector">
+                            #foreach($surface in $entity.surfaces)
+                                <li>$escTool.html($surface.title)</li>
+                            #end
+                        </ul>
+                    #end
+                </div>
             </div>
         </div>
     </div>
