--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/worlds.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/worlds.vm
@@ -5,6 +5,7 @@
     #parse('shared/html-head.vm')
     <title>#springMessage('LandingPage.title')</title>
 </head>
+#* @vtlvariable name="worldList" type="java.util.List<waypalm.domain.entity.World>" *#
     #parse('_index-macros.vm')
 <body id="bodyColumns" class="layout-1-4">
 <div class="content">
@@ -12,6 +13,13 @@
         #landingSidebar('landingSidebarCommon')
     </div>
     <div class="center">
+        <div class="content">
+            <ul>
+                #foreach($world in $worldList)
+                    <li><a href="$cp/w/$world.slug">$escTool.html($world.title)</a></li>
+                #end
+            </ul>
+        </div>
     </div>
 </div>
 </body>
