--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -141,15 +141,33 @@ ul.option-selector {
     }
 }
 
-.btn-round-32 {
-    display: block;
-    height: 32px;
-    width: 32px;
-    background: #999;
-    .border-radius(16px);
+ul.hmenu {
+    .clearfix();
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
-    &.btn-green {
-        background: #84CD1C;
-        color: #ffffff;
+    > li {
+        float: left;
+        list-style: none;
+        text-transform: uppercase;
+        font-size: 90%;
+        line-height: 100%;
+        font-family: @captionFontFamily;
+        font-weight: bold;
+        margin: 0 .5em;
+        padding: .5em;
+        background: #CCCC00;
+
+        &:first-of-type {
+            margin-left: 0;
+        }
+        &:last-of-type {
+            margin-right: 0;
+        }
+        > a {
+            text-decoration: none;
+            color: #ffffff;
+        }
     }
 }
