--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/world-view.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/world-view.vm
@@ -3,39 +3,39 @@
     $eCdn.setAppZone('/w')
 <head>
     #parse('shared/html-head.vm')
-#* @vtlvariable name="entity" type="waypalm.domain.entity.World" *#
-    <title>#springMessage1('WorldPage.title', $escTool.html($entity.title))</title>
+#* @vtlvariable name="world" type="waypalm.domain.entity.World" *#
+#* @vtlvariable name="worldPublishing" type="waypalm.domain.entity.WorldPublishing" *#
+    <title>#springMessage1('WorldPage.title', $escTool.html($world.title))</title>
 </head>
     #parse('_index-macros.vm')
     #parse('world/_world-macros.vm')
 <body id="bodyColumns" class="layout-1-4">
 <div class="content">
     <div class="left">
-        #set($world=$entity)
         #worldPageSidebar('landingSidebarWorld')
     </div>
     <div class="center">
         <div class="content">
-            <h1>$escTool.html($entity.title)
-                #if(!$entity.publisherTitle.empty)
+            <h1>$escTool.html($world.title)
+                #if(!$worldPublishing.publisherTitle.empty)
                     <span class="secondary">
-                        #springMessage1('WorldPage.worldTitle.secondary', $escTool.html($entity.publisherTitle))
+                        #springMessage1('WorldPage.worldTitle.secondary', $escTool.html($worldPublishing.publisherTitle))
                     </span>
                 #end
             </h1>
-
-            <p>$escTool.html($entity.memo)</p>
+            #if(!$worldPublishing.memo.empty)
+                <p>$escTool.html($worldPublishing.memo)</p>
+            #end
 
             <ul class="hmenu">
-                #if(!$entity.publisherUrl.empty)
+                #if(!$worldPublishing.publisherUrl.empty)
                     <li class="menu-item">
-                        <a href="$entity.publisherUrl" target="_blank">#springMessage('WorldPage.visitHomepage')</a>
-                    </li>
+                        <a href="$worldPublishing.publisherUrl"
+                           target="_blank">#springMessage('WorldPage.visitHomepage')</a></li>
                 #end
                 #if($eVisitor.logged)
-                    <li class="menu-item">
-                        <a href="">#springMessage('WorldPage.favourite')</a>
-                    </li>
+                    <li class="menu-item"><a>
+                        #springMessage('WorldPage.favourite')</a></li>
                 #end
             </ul>
 
