--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -128,7 +128,7 @@ ul.option-selector {
 
         &.current {
             > a {
-                background-color: #F5F5F5;
+                background-color: #FFC022;
                 color: #000000;
                 text-decoration: none;
 
@@ -150,14 +150,13 @@ ul.hmenu {
     > li {
         float: left;
         list-style: none;
-        text-transform: uppercase;
-        font-size: 93%;
+        text-transform: lowercase;
+        font-size: 90%;
         line-height: 100%;
         font-family: @captionFontFamily;
         font-weight: bold;
         margin: 0 .5em;
         padding: .5em;
-        background: fade(#FFCC33, 75%);
 
         &:first-of-type {
             margin-left: 0;
@@ -167,14 +166,13 @@ ul.hmenu {
         }
         > a {
             text-decoration: none;
-            color: #ffffff;
-            text-shadow: 0 -1px 1px darken(#84CD1C, 10%), 0 1px 1px #111;
+            color: #455;
+            text-decoration: underline;
         }
 
         &:hover {
-            background: #FFCC33;
             > a {
-                color: #ffffff;
+                color: #555;
             }
         }
     }
