--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/manage-world-surfaces.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/manage-world-surfaces.vm
@@ -18,6 +18,7 @@
             <h1>$escTool.html($world.title)</h1>
 
             <div class="section">
+                <a class="btn lower btn-green" href="#routeCreateWorldSurface($world)">define new surface</a>
             </div>
         </div>
     </div>
