--- a/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
@@ -47,6 +47,7 @@ label {
     }
 }
 
+a.btn,
 button,
 input[type=submit] {
     .btn-colorizer(@darkColor: #D6D6D6, @lightColor: #F5F5F5){
@@ -67,6 +68,7 @@ input[type=submit] {
     max-width: 100%;
     padding: 5px;
     cursor: pointer;
+    text-decoration: none;
 
     &:active {
         border-style: inset;
